Slogan alignment fix

--- a/src/components/HomePage/Showcase.scss
+++ b/src/components/HomePage/Showcase.scss
@@ -12,7 +12,7 @@
 		font-weight: 900;
 		line-height: 1;
 		margin-bottom: 1rem;
-		text-align: start;
+		text-align: start !important;
 
 		@media (max-width: breakpoints.$lg) {
 			font-size: 2.2rem;
